[package]
authors = ["yoshidan <naohiro.y@gmail.com>"]
description = "Google Cloud Platform storage client library."
documentation = "https://docs.rs/gcloud-storage/latest/gcloud_storage/"
edition = "2021"
keywords = ["gcp", "gcs", "storage", "googleapis", "google-cloud-rust"]
license = "MIT"
name = "gcloud-storage"
readme = "README.md"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/storage"
version = "1.1.0"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.5"
futures-util = "0.3"
token-source = "1.0"
hex = "0.4"
once_cell = "1.18"
percent-encoding = "2.3"
pkcs8 = {version = "0.10", features = ["pem"]}
regex = "1.9"
reqwest = {version = "0.12", features = [
  "json",
  "stream",
  "multipart",
], default-features = false}
reqwest-middleware = {version = "0.4", features = ["json", "multipart"]}
ring = "0.17"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
time = {version = "0.3", features = [
  "std",
  "macros",
  "formatting",
  "parsing",
  "serde",
]}
tokio = {version = "1.32", features = ["macros"]}
tracing = "0.1"
url = "2.4"

google-cloud-auth = {package = "gcloud-auth", optional = true, version = "1.1.0", path = "../foundation/auth", default-features = false}
google-cloud-metadata = {package = "gcloud-metadata", optional = true, version = "1.0.0", path = "../foundation/metadata"}

[dev-dependencies]
ctor = "0.1.26"
google-cloud-auth = { package = "gcloud-auth", path = "../foundation/auth", default-features = false}
serial_test = "3.1"
tokio = {version = "1.32", features = ["rt-multi-thread"]}
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}

[features]
auth = ["google-cloud-auth", "google-cloud-metadata"]
default = ["default-tls", "auth"]
default-tls = ["reqwest/default-tls", "google-cloud-auth?/default-tls"]
external-account = ["google-cloud-auth?/external-account"]
hickory-dns = ["reqwest/hickory-dns", "google-cloud-auth?/hickory-dns"]
rustls-tls = ["reqwest/rustls-tls", "google-cloud-auth?/rustls-tls"]
trace = []
