[package]
authors = ["yoshidan <naohiro.y@gmail.com>"]
description = "Google Cloud Platform storage client library."
documentation = "https://docs.rs/gcloud-storage/latest/gcloud_storage/"
edition = "2021"
keywords = ["gcp", "gcs", "storage", "googleapis", "google-cloud-rust"]
license = "MIT"
name = "gcloud-storage"
readme = "README.md"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/storage"
version = "2.0.0"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.5"
futures-util = "0.3"
token-source = "1.0"
hex = "0.4"
once_cell = "1.18"
percent-encoding = "2.3"
pkcs8 = {version = "0.10", features = ["pem"]}
regex = "1.9"
reqwest = {version = "0.13", features = [
  "json",
  "stream",
  "multipart",
], default-features = false}
reqwest-middleware = {version = "0.5", features = ["json", "multipart", "query"]}
ring = "0.17"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
time = {version = "0.3", features = [
  "std",
  "macros",
  "formatting",
  "parsing",
  "serde",
]}
tokio = {version = "1.32", features = ["macros"]}
tracing = "0.1"
url = "2.4"

google-cloud-auth = {package = "gcloud-auth", optional = true, version = "2.0.0", path = "../foundation/auth", default-features = false}
google-cloud-metadata = {package = "gcloud-metadata", optional = true, version = "1.0.1", path = "../foundation/metadata"}

[dev-dependencies]
ctor = "0.5"
google-cloud-auth = { package = "gcloud-auth", path = "../foundation/auth", features = ["jwt-aws-lc-rs"], default-features = false}
serial_test = "3.1"
tokio = {version = "1.32", features = ["rt-multi-thread"]}
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}

[features]
auth = ["google-cloud-auth", "google-cloud-metadata"]
default = ["rustls", "auth", "jwt-aws-lc-rs"]
rustls = ["google-cloud-auth?/rustls"]
rustls-no-provider = ["google-cloud-auth?/rustls-no-provider"]
external-account = ["google-cloud-auth?/external-account"]
hickory-dns = ["reqwest/hickory-dns", "google-cloud-auth?/hickory-dns"]
jwt-aws-lc-rs = ["google-cloud-auth?/jwt-aws-lc-rs"]
jwt-rust-crypto = ["google-cloud-auth?/jwt-rust-crypto"]
trace = []
