[package]
name = "google-cloud-auth"
version = "0.9.2"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2021"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/foundation/auth"
keywords = ["gcp","auth","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform server application authentication library."

[dependencies]
tracing = "0.1"
reqwest = { version="0.11", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = {  version = "1.0" }
jsonwebtoken = { version = "8" }
thiserror = "1.0"
async-trait = "0.1"
home = "0.5"
urlencoding = "2.1"
tokio = { version = "1.20", features = ["fs"]}
google-cloud-metadata = { version = "0.3.2", path = "../metadata" }
google-cloud-token = { version = "0.1.1", path = "../token" }
base64 = "0.21"
time = "0.3"

[dev-dependencies]
tokio = { version = "1.20", features = ["test-util", "rt-multi-thread", "macros"]}
tracing-subscriber = {version="0.3", features=["env-filter","std"]}
ctor = "0.1"
serial_test = "0.9"

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
