[package]
name = "gcloud-auth"
version = "1.1.1"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2021"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/foundation/auth"
keywords = ["gcp", "auth", "googleapis", "google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform server application authentication library."

[lib]
doctest = false

[dependencies]
tracing = "0.1"
reqwest = { version = "0.12.4", features = ["json", "charset"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
jsonwebtoken = { version = "9.2.0" }
thiserror = "1.0"
async-trait = "0.1"
home = "0.5"
urlencoding = "2.1"
tokio = { version = "1.32", features = ["fs"] }
google-cloud-metadata = { package = "gcloud-metadata", version = "1.0.0", path = "../metadata" }
token-source = "1.0"
base64 = "0.22"
time = "0.3"

url = { version = "2.4", optional = true }
path-clean = { version = "1.0", optional = true }
sha2 = { version = "0.10", optional = true }
percent-encoding = { version = "2.3", optional = true }
hmac = { version = "0.12", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1.32", features = ["test-util", "rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
ctor = "0.1"
tempfile = "3.8.0"
temp-env = { version = "0.3.6", features = ["async_closure"] }

[features]
default = ["default-tls"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
hickory-dns = ["reqwest/hickory-dns"]
external-account = ["sha2", "path-clean", "url", "percent-encoding", "hmac", "hex"]
