[package]
name = "google-cloud-gax"
version = "0.14.1"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2018"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/foundation/gax"
keywords = ["gcp","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform gRPC retry library."

[dependencies]
tracing = "0.1"
tokio = { version = "1.20", features = ["macros"] }
tonic = { version = "0.8", features = ["prost", "tls-webpki-roots"] }
thiserror = "1.0"
tower = { version = "0.4", features = ["filter"] }
http = "0.2"
google-cloud-token = { version = "0.1.1", path = "../token" }
tokio-retry = "0.3"
