[package]
name = "gcloud-gax"
version = "1.2.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2018"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/foundation/gax"
keywords = ["gcp","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform gRPC retry library."

[lib]
doctest = false

[dependencies]
tracing = "0.1"
tokio = { version = "1.32", features = ["macros"] }
tonic = { version = "0.13", default-features = false, features = ["prost", "tls-webpki-roots"] }
thiserror = "1.0"
tower = { version = "0.4", features = ["filter", "util"] }
http = "1.1"
token-source = "1.0"
tokio-retry2 = "0.5.3"
