[package]
name = "google-cloud-grpc"
version = "0.2.1"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2021"
repository = "https://github.com/yoshidan/google-cloud-rust/tree/main/foundation/grpc"
keywords = ["gcp","grpc","googleapis","google-cloud-rust"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Platform gRPC library."

[dependencies]
thiserror = "1.0"
tonic = { version = "0.6", features = ["tls", "prost"] }
tower = { version = "0.4", features = ["filter"]}
http = "0.2"
prost = "0.9"
prost-types = "0.9"
google-cloud-auth= { version = "0.1.2", path = "../auth" }
